--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,8 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/swiper/swiper-bundle.min.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -73,6 +75,9 @@
           "configurations": {
             "production": {
               "browserTarget": "movies:build:production"
+            },
+            "dev2": {
+              "browserTarget": "movies:build:local"
             }
           }
         },
