--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
+    "bootstrap": "^5.0.0-beta2",
+    "ng-starrating": "^1.0.20",
     "rxjs": "~6.6.0",
+    "swiper": "^6.4.15",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
